--- a/src/app/modules/user-page/components/event-item/event-item.component.scss
+++ b/src/app/modules/user-page/components/event-item/event-item.component.scss
@@ -161,9 +161,9 @@ a {
     overflow: hidden;
     position: relative;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.05);
-    background-color: #dadada;
+    background-color: #eeecec;
     color: #121212;
-    border: none;
+    border: 1px solid #dad9d9;
     cursor: pointer;
   
     &-decor {
