--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -78,6 +78,7 @@
         <app-events-page *ngIf="optionSelected === 2"></app-events-page>
         <app-notis *ngIf="optionSelected === 4"></app-notis>
         <app-card-payment *ngIf="optionSelected === 5"></app-card-payment>
+        <app-carrito *ngIf="optionSelected === 3"></app-carrito>
     </ion-content>
 
   </div>
@@ -167,6 +168,7 @@
     <app-events-page *ngIf="optionSelected === 2"></app-events-page>
     <app-notis *ngIf="optionSelected === 4"></app-notis>
     <app-card-payment *ngIf="optionSelected === 5"></app-card-payment>
+    <app-carrito *ngIf="optionSelected === 3"></app-carrito>
 
   </ion-content>
 </div>
