--- a/src/app/modules/user-page/components/carrito/carrito.component.html
+++ b/src/app/modules/user-page/components/carrito/carrito.component.html
@@ -43,19 +43,19 @@
         <div class="col" style="padding-left:0;">ITEMS {{ cartItems.length }}</div>
         <div class="col text-right">&euro; {{ getTotalPrice().toFixed(2) }}</div>
       </div>
+      <div class="row">
+        <div class="col" style="padding-left:0;">IVA </div>
+        <div class="col text-right"> &euro; {{ getTotalPrice().toFixed(1) }} x 21 %</div>
+      </div>
       <form>
-        <p>SHIPPING</p>
-        <select>
-          <option class="text-muted">Standard-Delivery- &euro;5.00</option>
-        </select>
         <p>CÓDIGO DE DESCUENTO</p>
         <input id="code" placeholder="Introduzca el código">
       </form>
       <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
-        <div class="col">PRECIO TOTAL</div>
-        <div class="col text-right ms-2">&euro; {{ getTotalPrice().toFixed(2) }}</div>
+        <div class="col-6">PRECIO TOTAL</div>
+        <div class="col text-right ms-2">&euro; {{ getTotalPriceWithTax().toFixed(2) }}</div>
       </div>
-      <button class="btn">CHECKOUT</button>
+      <button class="btn" (click)="validAndProceed()">Pagar</button>
     </div>
   </div>
 </div>
