--- a/src/app/modules/user-page/components/card-payment/card-payment.component.html
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.html
@@ -33,8 +33,8 @@
             <label for="cvc">CVC</label>
             <input id="cvc" type="text" class="form-control" placeholder="CVC">
           </div>
-          <div class="form-group ">
-            <button type="button" class="btn btn-primary">Proceder</button>
+          <div class="form-group d-flex flex-row-reverse">
+            <button type="button" class="btn btn-primary m-0 mt-3 w-25">Proceder</button>
           </div>
         </div>
       </div>
