Validaciones form pago

--- a/src/app/modules/user-page/components/card-payment/card-payment.component.html
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.html
@@ -15,23 +15,27 @@
         <div class="row">
           <div class="form-group col-sm-7">
             <label for="card-holder">Titular de la Tarjeta</label>
-            <input id="card-holder" type="text" class="form-control" placeholder="Titular de la Tarjeta">
+            <input id="card-holder" type="text" class="form-control" placeholder="Titular de la Tarjeta" oninput="this.value = this.value.replace(/[\d]/g, '');" required>
           </div>
           <div class="form-group col-sm-5">
             <label>Fecha de Vencimiento</label>
             <div class="input-group expiration-date">
-              <input type="text" class="form-control" placeholder="MM">
-              <span class="date-separator">/</span>
-              <input type="text" class="form-control" placeholder="AA">
+              <input type="text" class="form-control" placeholder="MM" minlength="2" maxlength="2"
+                  oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
+              <span class="date-separator m-1">/</span>
+              <input type="text" class="form-control" placeholder="AA" minlength="2" maxlength="2"
+                oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
             </div>
           </div>
           <div class="form-group col-sm-8">
             <label for="card-number">Número de Tarjeta</label>
-            <input id="card-number" type="text" class="form-control" placeholder="Número de Tarjeta">
+            <input id="card-number" type="text" class="form-control" placeholder="Número de Tarjeta" minlength="16" maxlength="16"
+              oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
           </div>
           <div class="form-group col-sm-4">
-            <label for="cvc">CVC</label>
-            <input id="cvc" type="text" class="form-control" placeholder="CVC">
+            <label for="cvc">CVV</label>
+            <input id="cvc" type="password" class="form-control" placeholder="&#9679;&#9679;&#9679;" minlength="3" maxlength="3"
+              oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
           </div>
           <div class="form-group d-flex flex-row-reverse">
             <button type="button" class="btn btn-primary m-0 mt-3 w-25">Proceder</button>
