--- a/src/app/modules/user-page/components/card-payment/card-payment.component.html
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.html
@@ -1,4 +1,4 @@
-<section class="payment-form dark">
+<section class="payment-form">
   <div class="container">
     <form>
       <div class="products">
@@ -21,7 +21,7 @@
             <label>Fecha de Vencimiento</label>
             <div class="input-group expiration-date">
               <input type="text" class="form-control" placeholder="MM">
-              <span class="date-separator">/</span>
+              <span class="date-separator m-2 ">/</span>
               <input type="text" class="form-control" placeholder="AA">
             </div>
           </div>
@@ -34,7 +34,7 @@
             <input id="cvc" type="text" class="form-control" placeholder="CVC">
           </div>
           <div class="form-group d-flex flex-row-reverse">
-            <button type="button" class="btn btn-primary m-0 mt-3 w-25">Proceder</button>
+            <button type="button" class="btn btn-primary m-0 mt-3 w-25" (click)="proceedToPay()">Proceder</button>
           </div>
         </div>
       </div>
