Quitar links de cards de deportes porque llevaban a la página principal

--- a/src/app/modules/user-page/components/event-item/event-item.component.html
+++ b/src/app/modules/user-page/components/event-item/event-item.component.html
@@ -1,12 +1,12 @@
 <div class="container d-flex justify-content-center">
   <figure class="card card-product-grid card-lg">
-    <a href="#" class="img-wrap" data-abc="true">
+    <a class="img-wrap" data-abc="true">
       <img [src]="imagenUrl">
     </a>
     <figcaption class="info-wrap">
       <div class="row">
         <div class="col-md-9 col-xs-9">
-          <a href="#" class="title" data-abc="true">{{titulo}}</a>
+          <a class="title" data-abc="true">{{titulo}}</a>
           <span class="rated">Eventos</span>
         </div>
         <div class="col-md-3 col-xs-3">
@@ -20,7 +20,7 @@
       <figcaption class="info-wrap">
         <div class="row">
           <div class="col-md-7 col-xs-7 description-wrap">
-            <a href="#" class="title" data-abc="true">{{descripcion}}</a>
+            <a class="title" data-abc="true">{{descripcion}}</a>
             <span class="rated">A partir del: {{fecha}}</span>
           </div>
           <div class="col-md-5 col-xs-5 button-wrap">
