--- a/src/app/modules/user-page/components/events-page/events-page.component.html
+++ b/src/app/modules/user-page/components/events-page/events-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container p-1">
   <div class="row">
     <div class="col-md-6" *ngFor="let evento of eventos; let i = index;">
       <app-event-item [titulo]="eventos[i].titulo" [descripcion]="eventos[i].descripcion" [fecha]="eventos[i].fecha" [imagenUrl]="eventos[i].imagenUrl" [id]="eventos[i].id"></app-event-item>
