--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <ion-app>
-  <app-navbar></app-navbar>
+  <app-navbar>  
+  </app-navbar>
+  <app-spinner *ngIf="isBusy" class="position-absolute top-50 start-50 translate-middle"></app-spinner>
 </ion-app>
 
