--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -80,7 +80,7 @@
         <app-card-payment *ngIf="optionSelected === 5"></app-card-payment>
         <app-carrito *ngIf="optionSelected === 3"></app-carrito>
     </ion-content>
-
+    <app-spinner *ngIf="isBusy" class="position-absolute top-50 start-50 translate-middle"></app-spinner>
   </div>
 </ion-split-pane>
 </div>
@@ -169,7 +169,7 @@
     <app-notis *ngIf="optionSelected === 4"></app-notis>
     <app-card-payment *ngIf="optionSelected === 5"></app-card-payment>
     <app-carrito *ngIf="optionSelected === 3"></app-carrito>
-
   </ion-content>
+  <app-spinner *ngIf="isBusy" class="position-absolute top-50 start-50 translate-middle"></app-spinner>
 </div>
 </div>
