Update spinner component styles and fix console error in card payment component

--- a/src/app/modules/user-page/components/carrito/carrito.component.html
+++ b/src/app/modules/user-page/components/carrito/carrito.component.html
@@ -6,7 +6,6 @@
           <div class="col">
             <h4><b>Carrito de compra</b></h4>
           </div>
-          <div class="col align-self-center text-right text-muted">{{ cartItems.length }} items</div>
         </div>
       </div>
 
@@ -40,20 +39,17 @@
       </div>
       <hr>
       <div class="row">
-        <div class="col boldy" style="padding-left:0;">ITEMS {{ cartItems.length }}</div>
-        <div class="col text-right ">&euro; {{ getTotalPrice().toFixed(2) }}</div>
+        <div class="col boldy" style="padding-left:0;">ITEMS </div>
+        <div class="col text-right ">{{ cartItems.length }}</div>
       </div>
-      <div class="row">
-        <div class="col boldy" style="padding-left:0;">IVA </div>
-        <div class="col text-right"> &euro; {{ getTotalPrice().toFixed(1) }} x 21 %</div>
-      </div>
+
       <form>
         <p>CÓDIGO DE DESCUENTO</p>
         <input id="code" placeholder="Introduzca el código">
       </form>
       <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
         <div class="col-6 boldy">PRECIO TOTAL</div>
-        <div class="col text-right ms-2">&euro; {{ getTotalPriceWithTax().toFixed(2) }}</div>
+        <div class="col text-right ms-2">&euro; {{ getTotalPrice().toFixed(2) }}</div>
       </div>
 
       <button class="button" (click)="validAndProceed()">
