--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -44,6 +44,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
+                  
         </ion-row>
         <ion-col size="12" size-md="12" size-lg="6" size-xl="6"></ion-col>
       </ion-grid>
@@ -79,6 +80,7 @@
         <app-notis *ngIf="optionSelected === 4"></app-notis>
         <app-card-payment *ngIf="optionSelected === 5"></app-card-payment>
         <app-carrito *ngIf="optionSelected === 3"></app-carrito>
+        <app-payment-response *ngIf="optionSelected === 6"></app-payment-response>
     </ion-content>
 
   </div>
@@ -169,6 +171,7 @@
     <app-notis *ngIf="optionSelected === 4"></app-notis>
     <app-card-payment *ngIf="optionSelected === 5"></app-card-payment>
     <app-carrito *ngIf="optionSelected === 3"></app-carrito>
+    <app-payment-response *ngIf="optionSelected === 6"></app-payment-response>
 
   </ion-content>
 </div>
