--- a/src/app/components/spinner/spinner.component.scss
+++ b/src/app/components/spinner/spinner.component.scss
@@ -1,26 +1,144 @@
-.loader {
-  --size: 40px;
-  display: flex;
-  gap: 0.6rem;
- }
- 
- .box {
-  width: var(--size);
-  height: var(--size);
-  background: #1036DE;
-  animation: rotate 2s infinite;
- }
- 
- .box:nth-child(2) {
-  animation-delay: 0.25s;
- }
- 
- .box:nth-child(3) {
-  animation-delay: 0.5s;
- }
- 
- @keyframes rotate {
-  50% {
-   transform: rotate(180deg)
+.wrapper {
+  width: 12.5rem;
+  height: 3.75rem;
+  position: relative;
+  z-index: 1;
+}
+
+.circle {
+  width: 1.25rem;
+  height: 1.25rem;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #1036DE;
+  left: 15%;
+  -webkit-transform-origin: 50%;
+      -ms-transform-origin: 50%;
+          transform-origin: 50%;
+  -webkit-animation: circle7124 .5s alternate infinite ease;
+          animation: circle7124 .5s alternate infinite ease;
+}
+
+@-webkit-keyframes circle7124 {
+  0% {
+    top: 3.75rem;
+    height: 0.313rem;
+    border-radius: 3.125rem 3.125rem 3.125rem 3.125rem;
+    -webkit-transform: scaleX(1.7);
+            transform: scaleX(1.7);
   }
- }
+
+  40% {
+    height: 1.25rem;
+    border-radius: 50%;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+
+  100% {
+    top: 0%;
+  }
+}
+
+@keyframes circle7124 {
+  0% {
+    top: 3.75rem;
+    height: 0.313rem;
+    border-radius: 3.125rem 3.125rem 3.125rem 3.125rem;
+    -webkit-transform: scaleX(1.7);
+            transform: scaleX(1.7);
+  }
+
+  40% {
+    height: 1.25rem;
+    border-radius: 50%;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+
+  100% {
+    top: 0%;
+  }
+}
+
+.circle:nth-child(2) {
+  left: 45%;
+  -webkit-animation-delay: .2s;
+          animation-delay: .2s;
+}
+
+.circle:nth-child(3) {
+  left: auto;
+  right: 15%;
+  -webkit-animation-delay: .3s;
+          animation-delay: .3s;
+}
+
+.shadow {
+  width: 1.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  background-color: rgba(0,0,0,0.9);
+  position: absolute;
+  top: 3.875rem;
+  -webkit-transform-origin: 50%;
+      -ms-transform-origin: 50%;
+          transform-origin: 50%;
+  z-index: -1;
+  left: 15%;
+  -webkit-filter: blur(0.063rem);
+          filter: blur(0.063rem);
+  -webkit-animation: shadow046 .5s alternate infinite ease;
+          animation: shadow046 .5s alternate infinite ease;
+}
+
+@-webkit-keyframes shadow046 {
+  0% {
+    -webkit-transform: scaleX(1.5);
+            transform: scaleX(1.5);
+  }
+
+  40% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+    opacity: .7;
+  }
+
+  100% {
+    -webkit-transform: scaleX(.2);
+            transform: scaleX(.2);
+    opacity: .4;
+  }
+}
+
+@keyframes shadow046 {
+  0% {
+    -webkit-transform: scaleX(1.5);
+            transform: scaleX(1.5);
+  }
+
+  40% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+    opacity: .7;
+  }
+
+  100% {
+    -webkit-transform: scaleX(.2);
+            transform: scaleX(.2);
+    opacity: .4;
+  }
+}
+
+.shadow:nth-child(4) {
+  left: 45%;
+  -webkit-animation-delay: .2s;
+          animation-delay: .2s
+}
+
+.shadow:nth-child(5) {
+  left: auto;
+  right: 15%;
+  -webkit-animation-delay: .3s;
+          animation-delay: .3s;
+}
