Fix user-select style in carrito.component.scss

--- a/src/app/modules/user-page/components/carrito/carrito.component.scss
+++ b/src/app/modules/user-page/components/carrito/carrito.component.scss
@@ -131,6 +131,7 @@ input:focus::-webkit-input-placeholder
     color: white;
     -webkit-box-shadow: none;
     -webkit-user-select: none;
+    user-select: none;
     transition: none; 
 }
 .btn:hover{
