Update event-details.component.html and event-details.component.ts

--- a/src/app/modules/user-page/components/event-details/event-details.component.html
+++ b/src/app/modules/user-page/components/event-details/event-details.component.html
@@ -3,7 +3,7 @@
     <div class="cart">
       <div class="container main-container mt-5 ">
         <div class="row justify-content-around">
-          <div class="col-lg-5 p-0">
+          <div class="col-lg-5 p-0 bol">
             <div class="product__photo">
               <div class="photo-container">
                 <div class="photo-main">
@@ -12,7 +12,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-5 ">
+          <div class="col-lg-6 ">
             <div class="product__info ">
               <div class="title mt-2">
                 <h1>{{ title }}</h1>
