--- a/src/app/modules/user-page/components/card-payment/card-payment.component.html
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.html
@@ -15,28 +15,28 @@
         <div class="row">
           <div class="form-group col-sm-7">
             <label for="card-holder">Titular de la Tarjeta</label>
-            <input id="card-holder" type="text" class="form-control" placeholder="Titular de la Tarjeta" oninput="this.value = this.value.replace(/[\d]/g, '');" required>
+            <input id="card-holder" type="text" class="form-control" placeholder="Titular de la Tarjeta" name="titular" oninput="this.value = this.value.replace(/[\d]/g, '');" [(ngModel)]="titular" required>
           </div>
           <div class="form-group col-sm-5">
             <label>Fecha de Vencimiento</label>
             <div class="input-group expiration-date">
-              <input type="text" class="form-control" placeholder="MM" minlength="2" maxlength="2"
-                  oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
+              <input type="text" class="form-control" name="expirationMonth" placeholder="MM" minlength="2" maxlength="2"
+                  oninput="this.value = this.value.replace(/[^\d]/g, '');" [(ngModel)]="expirationMonth" required>
               <span class="date-separator m-2">/</span>
-              <input type="text" class="form-control" placeholder="AA" minlength="2" maxlength="2"
-                oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
+              <input type="text" class="form-control" name="expirationYear" placeholder="AA" minlength="2" maxlength="2"
+                oninput="this.value = this.value.replace(/[^\d]/g, '');" [(ngModel)]="expirationYear" required>
 
             </div>
           </div>
           <div class="form-group col-sm-8">
             <label for="card-number">Número de Tarjeta</label>
-            <input id="card-number" type="text" class="form-control" placeholder="Número de Tarjeta" minlength="16" maxlength="16"
-              oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
+            <input id="card-number" type="text" class="form-control" name="cardNumber" placeholder="Número de Tarjeta" minlength="16" maxlength="16"
+              oninput="this.value = this.value.replace(/[^\d]/g, '');" [(ngModel)]="cardNumber" required>
           </div>
           <div class="form-group col-sm-4">
             <label for="cvc">CVV</label>
-            <input id="cvc" type="password" class="form-control" placeholder="&#9679;&#9679;&#9679;" minlength="3" maxlength="3"
-              oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
+            <input id="cvc" type="password" class="form-control" name="cvv" placeholder="&#9679;&#9679;&#9679;" minlength="3" maxlength="3"
+              oninput="this.value = this.value.replace(/[^\d]/g, '');" [(ngModel)]="cvv" required>
           </div>
           <div class="form-group d-flex flex-row-reverse">
             <button type="button" class="btn btn-primary m-0 mt-3 w-25" (click)="proceedToPay()">Proceder</button>
