--- a/src/app/modules/user-page/components/card-payment/card-payment.component.html
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.html
@@ -1,6 +1,6 @@
 <section class="payment-form">
   <div class="container">
-    <form>
+    <form (submit)="submitForm($event)">
       <div class="products">
         <h3 class="title">Pagar</h3>
         <div *ngFor="let product of purchasedElements" class="item">
@@ -39,7 +39,7 @@
               oninput="this.value = this.value.replace(/[^\d]/g, '');" required>
           </div>
           <div class="form-group d-flex flex-row-reverse">
-            <button type="button" class="btn btn-primary m-0 mt-3 w-25" (click)="proceedToPay()">Proceder</button>
+            <button type="submit" class="btn btn-primary m-0 mt-3 w-25">Proceder</button>
           </div>
         </div>
       </div>
